--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     -->
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKJvIPlfc8N8H6v26klX7IgHXbYPpw0bM&libraries=places&callback=initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key='API KEY'&libraries=places&callback=initMap" async defer></script>
     <title>React App</title>
 </head>
 
